# ai_agent_learning

./: .dockerignore  .env.docker  .pre-commit-config.yaml  Dockerfile  README.md  app.db  compose.yaml  demo.py  pyproject.toml
alembic/: env.py
alembic/versions/: 64ad5455b3bc_create_sessions_messages_tasks_tables.py
src/app/: check_db.py  check_llm_gateway.py  check_seed_data.py  db.py  deps.py  init_db.py  main.py  middleware.py  models.py  schemas.py  seed_demo_data.py
src/app/core/: redis_client.py  security.py
src/app/crud/: __init__.py  check_async_crud.py  check_crud.py  session_crud.py
src/app/llm/: types.py
src/app/llm/providers/: deepseek_provider.py  openai_provider.py
src/app/routers/: __init__.py  auth.py  chat.py  users.py
src/app/services/: cache_service.py  llm_gateway.py  logging_service.py  rate_limit_service.py  session_store_service.py
src/health_api/: main.py
tests/: conftest.py  test_auth.py  test_cache_service.py  test_chat.py  test_chat_stream.py  test_crud.py  test_main.py  test_rate_limit_service.py  test_redis_integration.py  test_schemas.py  test_session_store_service.py  test_users.py
