[project]
name = "ai-agent-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.ruff]
# 指定 Python 版本
target-version = "py311"
# 要检查的目录
line-length = 88

[tool.ruff.lint]
# 选择要启用的规则
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
# 忽略某些规则
ignore = [
    "E501",  # 行长度由 formatter 处理
]

[tool.ruff.format]
# 格式化配置
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.fastapi]
main = "main:app"

[tool.ruff.lint.per-file-ignores]
"src/app/**/*.py" = ["B008"]
